<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_id">1406596049552680</string>
    <string name="app_name">Plumbers United</string>
    <string name="action_settings">Settings</string>
	<string name="main_text">What are you looking for?</string>
	<string name="user_button">I\'m looking for a plumber</string>
	<string name="plumber_button">I\'m a plumber looking for clients</string>
	<string name="see_plumbers_button">See plumbers</string>
	<string name="users_area_welcome">User Area</string>
	<string name="search_plumbers">Search Plumbers</string>
	<string name="post_ad">Post advertisement</string>
	<string name="plumbers_area_welcome">Plumbers area</string>
	<string name="authenticate">Login</string>
	<string name="create_account">Create Account</string>
	<string name="login">Login</string>
	<string name="Username">UserName</string>
	<string name="password">Password</string>
	<string name="register">"I don\'t have an account, register me"</string>
	 <string name="image">Thumbnail</string>
	 <string name="askForHelp">Ask for Help</string>
	 <string name="askForHelpDescription">Please take a photo and \n describe your problem</string>
	 <string name="camera_button">Press to Shoot</string>
	 <string name="ask_for_help_button">Ask for help</string>
	 <string name="send">SEND</string>
	 <string name="description">Description</string>
	 <string name="updateInformation">Update Information</string>
	 <string name="search_plumbers_text">Search Plumbers</string>
	 <string name="go_search_button">Search</string>
	 <string name="updatePlumber">Update Plumber</string>
	 <string name="register_userName">Username</string>
	 <string name="register_email">Email</string>
	 <string name="register_button">Register</string>
	 <string name="register_password">Password</string>
	 <string name="ad_plumberName">Plumber Username</string>
	 <string name="ad_price">Price per hour</string>
	 <string name="ad_description">Description</string>
	 <string name="ad_publish">Publish</string>
	 <string name="see_all_ads_button">See ads</string>
	 <string name="ad_contactNumber">Contact Number</string>
	 <string name="ad_title">Ad Title</string>
	 <string name="update_email">Email (necessary)</string>
	 <string name="update_updateUser">Update User</string>
	 <string name="update_password">Password (optional)</string>
	 <string name="update_deactivate_user">Deactivate User (optional)</string>
	 <string name="update_button">Update</string>
	 <string name="ad_address">Address</string>
	 <string name="get_started">To get started, log in using Facebook</string>
	 <string name="update_note">Note: You must be logged in with the User you want to update. All the fields provided above will be updated in the current user.</string>
</resources>
