<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303040" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/askForHelp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:maxLines="10"
        android:singleLine="false"
        android:text="@string/askForHelpDescription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/send"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="true"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:scaleType="centerInside"
        android:src="@drawable/help_image" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/camera_button"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/camera_button"
        android:layout_marginTop="18dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

    <EditText
        android:id="@+id/login_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:ellipsize="none"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

</RelativeLayout>