<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303040" >

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:text="@string/Username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/login_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_userName"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_button"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_password"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:layout_marginTop="26dp"
        android:text="@string/login" />

</RelativeLayout>
