<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#303040" >

    <Button
        android:id="@+id/usersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plumbersButton"
        android:layout_alignRight="@+id/plumbersButton"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="41dp"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:text="@string/user_button" />

    <Button
        android:id="@+id/plumbersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usersButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:text="@string/plumber_button" />

    <Button
        android:id="@+id/launch_testActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plumbersButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:textColor="#AFDEFE"
		android:typeface="serif"
		android:textStyle="italic"
        android:text="TestActivity" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/main_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#AFDEFE"
        android:textStyle="italic"
        android:typeface="serif" />

</RelativeLayout>